test/1.2/errors/T_WNDOCRA.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

/// COMPILE-ONLY

/// WARNING WNDOCRA
connect C {
    parameter configuration = "required";
}

/// WARNING WNDOCRA
attribute A {
   parameter configuration = "required";
   parameter allocate_type = "int32";
}
